php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #34905 PHP_AUTH_DIGEST does not work
Submitted: 2005-10-18 13:18 UTC Modified: 2005-10-19 01:15 UTC
From: lacak at users dot sourceforge dot net Assigned:
Status: Closed Package: Apache related
PHP Version: 5.1.0RC3 OS: Windows 98
Private report: No CVE-ID: None
 [2005-10-18 13:18 UTC] lacak at users dot sourceforge dot net
Description:
------------
in php 5.1 was introduced new server variable $_SERVER["PHP_AUTH_DIGEST"].
See :
http://www.php.net/manual/en/features.http-auth.php
but the example 34-2 does not work.
It does not work, because $_SERVER["PHP_AUTH_DIGEST"] is never set (initialized)

please look also at bug 34401 (it is same + also contains feature change request)

I use Apache 1.3.33 and php as apache module.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-10-19 01:15 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC