Fixed bug #34905 (Digest authentication does not work with Apache 1).